# jxlatte

./: .gitignore  LICENSE  README.md  jitpack.yml  meson.build  pom.xml  settings.gradle
java/: meson.build
java/com/thebombzen/jxlatte/: ExceptionalSupplier.java  IntBiConsumer.java  InvalidBitstreamException.java  JXLCodestreamDecoder.java  JXLDecoder.java  JXLImage.java  JXLOptions.java  JXLatte.java  MathHelper.java  Options.java
java/com/thebombzen/jxlatte/bundle/: AnimationHeader.java  BitDepthHeader.java  Extensions.java  ExtraChannelInfo.java  ExtraChannelType.java  ImageHeader.java  PreviewHeader.java  SizeHeader.java
java/com/thebombzen/jxlatte/bundle/color/: CIEPrimaries.java  CIEXY.java  ColorEncoding.java  ColorEncodingBundle.java  ColorFlags.java  ColorSpace.java  CustomXY.java  OpsinInverseMatrix.java  Primaries.java  ToneMapping.java  TransferFunction.java  WhitePoint.java
java/com/thebombzen/jxlatte/color/: CIEXY.java  ColorEncodingBundle.java  ColorFlags.java  ColorManagement.java  CustomXY.java  JXLColorSpace.java  OpsinInverseMatrix.java  ToneMapping.java
java/com/thebombzen/jxlatte/entropy/: ANSState.java  ANSSymbolDistribution.java  EntropyStream.java  HybridIntegerConfig.java  PrefixSymbolDistribution.java  SymbolDistribution.java  VLCTable.java
java/com/thebombzen/jxlatte/frame/: BlendingInfo.java  Frame.java  FrameHeader.java  HFCoefficients.java  LFCoefficients.java  LFGlobal.java  LFGroup.java  Pass.java  PassGroup.java  Passes.java  PassesInfo.java  RestorationFilter.java  Spline.java  SplineArc.java
java/com/thebombzen/jxlatte/frame/features/: NoiseGroup.java  NoiseParameters.java  Patch.java  RestorationFilter.java  Spline.java  SplineArc.java  SplinesBundle.java  XorShiro.java
java/com/thebombzen/jxlatte/frame/features/noise/: NoiseGroup.java  (+1 more)
java/com/thebombzen/jxlatte/frame/group/: LFGroup.java  Pass.java  PassGroup.java  PassesInfo.java
java/com/thebombzen/jxlatte/frame/lfglobal/: GlobalModular.java  HFBlockContext.java  LFChannelCorrelation.java  LFGlobal.java  NoiseParameters.java  NoiseParamters.java  Patch.java  Splines.java
java/com/thebombzen/jxlatte/frame/lfgroup/: HFCoefficients.java  LFCoefficients.java  LFGroup.java
java/com/thebombzen/jxlatte/frame/modular/: GlobalModular.java  IntFloatFunction.java  MADecisionNode.java  MALeafNode.java  MATree.java  ModularChannel.java  ModularChannelInfo.java  ModularStream.java  SqueezeParam.java
java/com/thebombzen/jxlatte/frame/vardct/: DCTParams.java  HFBlockContext.java  HFCoefficients.java  HFGlobal.java  HFMetadata.java  HFPass.java  LFChannelCorrelation.java  LFCoefficients.java  Quantizer.java  TransformType.java  Varblock.java
java/com/thebombzen/jxlatte/image/: JXLImage.java  JxlImage.java
java/com/thebombzen/jxlatte/io/: Bitreader.java  ByteArrayQueueInputStream.java  Demuxer.java  DemuxerThread.java  IOHelper.java  InputStreamBitreader.java  Loggers.java  PFMWriter.java  PNGWriter.java  PushbackInputStream.java
java/com/thebombzen/jxlatte/util/: ChebyschevApproximation.java  ColorManagement.java  DoublePoint.java  ExceptionalFunction.java  ExceptionalIntBiConsumer.java  ExceptionalIntConsumer.java  ExceptionalRunnable.java  ExceptionalSupplier.java  FlowHelper.java  FunctionalHelper.java  IntBiConsumer.java  IntPoint.java  IteratorIterable.java  MathHelper.java  Point.java  TaskList.java
java/com/thebombzen/jxlatte/util/functional/: ExceptionalFunction.java  ExceptionalIntBiConsumer.java  ExceptionalIntConsumer.java  ExceptionalRunnable.java  ExceptionalSupplier.java  FunctionalHelper.java
java/com/traneptora/jxlatte/: InvalidBitstreamException.java  JXLCodestreamDecoder.java  JXLDecoder.java  JXLImage.java  JXLOptions.java  JXLatte.java
java/com/traneptora/jxlatte/bundle/: AnimationHeader.java  BitDepthHeader.java  BlendingInfo.java  Extensions.java  ExtraChannelInfo.java  ExtraChannelType.java  ImageHeader.java  PassesInfo.java  PreviewHeader.java  SizeHeader.java
java/com/traneptora/jxlatte/color/: CIEPrimaries.java  CIEXY.java  ColorEncodingBundle.java  ColorFlags.java  ColorManagement.java  CustomXY.java  GammaTransferFunction.java  JXLColorSpace.java  OpsinInverseMatrix.java  ToneMapping.java  TransferFunction.java
java/com/traneptora/jxlatte/entropy/: ANSState.java  ANSSymbolDistribution.java  EntropyState.java  EntropyStream.java  HybridIntegerConfig.java  PrefixSymbolDistribution.java  SymbolDistribution.java  VLCTable.java  VLCTableEntry.java
java/com/traneptora/jxlatte/frame/: BlendingInfo.java  Frame.java  FrameFlags.java  FrameHeader.java  LFGlobal.java
java/com/traneptora/jxlatte/frame/features/: Patch.java  RestorationFilter.java  XorShiro.java
java/com/traneptora/jxlatte/frame/group/: LFGroup.java  Pass.java  PassGroup.java  PassesInfo.java
java/com/traneptora/jxlatte/frame/modular/: GlobalModular.java  MATree.java  ModularChannel.java  ModularChannelInfo.java  ModularStream.java  SqueezeParam.java  TransformInfo.java  WPParams.java
java/com/traneptora/jxlatte/frame/vardct/: DCTParams.java  HFBlockContext.java  HFCoefficients.java  HFGlobal.java  HFMetadata.java  HFPass.java  LFChannelCorrelation.java  LFCoefficients.java  LLFScale.java  Quantizer.java  TransformType.java  Varblock.java
java/com/traneptora/jxlatte/io/: Bitreader.java  Demuxer.java  IOHelper.java  InvalidBitstreamException.java  Loggers.java  PFMWriter.java  PNGWriter.java  PushbackInputStream.java
java/com/traneptora/jxlatte/util/: ChebyschevApproximation.java  Dimension.java  FlowHelper.java  ImageBuffer.java  IntPoint.java  IteratorIterable.java  MathHelper.java  MutableLong.java  Point.java  Range2DIterator.java  RangeIterator.java  Rectangle.java  TaskList.java
java/com/traneptora/jxlatte/util/functional/: ExceptionalConsumer.java  ExceptionalFunction.java  ExceptionalIntBiConsumer.java  ExceptionalIntConsumer.java  ExceptionalIntTriConsumer.java  ExceptionalRunnable.java  ExceptionalSupplier.java  FloatUnaryOperator.java  FunctionalHelper.java
java/resources/: bt2020-d65-pq.icc  bt2020-d65-pq.icc.zz  bt709-d65-srgb.icc.zz  natural-order.dat.zz
(+120 files in other folders)
