src = files(
    # com.thebombzen.jxlatte
    'com/thebombzen/jxlatte/InvalidBitstreamException.java',
    'com/thebombzen/jxlatte/JXLatte.java',
    'com/thebombzen/jxlatte/JXLCodestreamDecoder.java',
    'com/thebombzen/jxlatte/JXLDecoder.java',
    'com/thebombzen/jxlatte/JXLImage.java',
    'com/thebombzen/jxlatte/Options.java',

    # com.thebombzen.jxlatte.bundle
    'com/thebombzen/jxlatte/bundle/AnimationHeader.java',
    'com/thebombzen/jxlatte/bundle/BitDepthHeader.java',
    'com/thebombzen/jxlatte/bundle/Extensions.java',
    'com/thebombzen/jxlatte/bundle/ExtraChannelInfo.java',
    'com/thebombzen/jxlatte/bundle/ExtraChannelType.java',
    'com/thebombzen/jxlatte/bundle/PreviewHeader.java',
    'com/thebombzen/jxlatte/bundle/SizeHeader.java',

    # com.thebombzen.jxlatte.color
    'com/thebombzen/jxlatte/color/CIEPrimaries.java',
    'com/thebombzen/jxlatte/color/CIEXY.java',
    'com/thebombzen/jxlatte/color/ColorEncodingBundle.java',
    'com/thebombzen/jxlatte/color/ColorFlags.java',
    'com/thebombzen/jxlatte/color/ColorManagement.java',
    'com/thebombzen/jxlatte/color/CustomXY.java',
    'com/thebombzen/jxlatte/color/OpsinInverseMatrix.java',
    'com/thebombzen/jxlatte/color/ToneMapping.java',

    # com.thebombzen.jxlatte.entropy
    'com/thebombzen/jxlatte/entropy/ANSState.java',
    'com/thebombzen/jxlatte/entropy/ANSSymbolDistribution.java',
    'com/thebombzen/jxlatte/entropy/EntropyStream.java',
    'com/thebombzen/jxlatte/entropy/HybridIntegerConfig.java',
    'com/thebombzen/jxlatte/entropy/PrefixSymbolDistribution.java',
    'com/thebombzen/jxlatte/entropy/SymbolDistribution.java',
    'com/thebombzen/jxlatte/entropy/VLCTable.java',

    # com.thebombzen.jxlatte.frame
    'com/thebombzen/jxlatte/frame/BlendingInfo.java',
    'com/thebombzen/jxlatte/frame/Frame.java',
    'com/thebombzen/jxlatte/frame/FrameFlags.java',
    'com/thebombzen/jxlatte/frame/FrameHeader.java',
    'com/thebombzen/jxlatte/frame/LFGlobal.java',

    # com.thebombzen.jxlatte.frame.features
    'com/thebombzen/jxlatte/frame/features/Patch.java',
    'com/thebombzen/jxlatte/frame/features/RestorationFilter.java',

    # com.thebombzen.jxlatte.frame.features.noise
    'com/thebombzen/jxlatte/frame/features/noise/NoiseGroup.java',
    'com/thebombzen/jxlatte/frame/features/noise/NoiseParameters.java',
    'com/thebombzen/jxlatte/frame/features/noise/XorShiro.java',

    # com.thebombzen.jxlatte.frame.features.noise.spline
    'com/thebombzen/jxlatte/frame/features/spline/FloatPoint.java',
    'com/thebombzen/jxlatte/frame/features/spline/Spline.java',
    'com/thebombzen/jxlatte/frame/features/spline/SplineArc.java',
    'com/thebombzen/jxlatte/frame/features/spline/SplinesBundle.java',

    # com.thebombzen.jxlatte.frame.group
    'com/thebombzen/jxlatte/frame/group/LFGroup.java',
    'com/thebombzen/jxlatte/frame/group/Pass.java',
    'com/thebombzen/jxlatte/frame/group/PassesInfo.java',
    'com/thebombzen/jxlatte/frame/group/PassGroup.java',

    # com.thebombzen.jxlatte.frame.modular
    'com/thebombzen/jxlatte/frame/modular/GlobalModular.java',
    'com/thebombzen/jxlatte/frame/modular/MATree.java',
    'com/thebombzen/jxlatte/frame/modular/ModularChannel.java',
    'com/thebombzen/jxlatte/frame/modular/ModularChannelInfo.java',
    'com/thebombzen/jxlatte/frame/modular/ModularStream.java',
    'com/thebombzen/jxlatte/frame/modular/SqueezeParam.java',
    'com/thebombzen/jxlatte/frame/modular/TransformInfo.java',
    'com/thebombzen/jxlatte/frame/modular/WPParams.java',

    # com.thebombzen.jxlatte.frame.vardct
    'com/thebombzen/jxlatte/frame/vardct/DCTParams.java',
    'com/thebombzen/jxlatte/frame/vardct/HFBlockContext.java',
    'com/thebombzen/jxlatte/frame/vardct/HFCoefficients.java',
    'com/thebombzen/jxlatte/frame/vardct/HFGlobal.java',
    'com/thebombzen/jxlatte/frame/vardct/HFMetadata.java',
    'com/thebombzen/jxlatte/frame/vardct/HFPass.java',
    'com/thebombzen/jxlatte/frame/vardct/LFChannelCorrelation.java',
    'com/thebombzen/jxlatte/frame/vardct/LFCoefficients.java',
    'com/thebombzen/jxlatte/frame/vardct/Quantizer.java',
    'com/thebombzen/jxlatte/frame/vardct/TransformType.java',
    'com/thebombzen/jxlatte/frame/vardct/Varblock.java',

    # com.thebombzen.jxlatte.io
    'com/thebombzen/jxlatte/io/Bitreader.java',
    'com/thebombzen/jxlatte/io/Demuxer.java',
    'com/thebombzen/jxlatte/io/IOHelper.java',
    'com/thebombzen/jxlatte/io/PFMWriter.java',
    'com/thebombzen/jxlatte/io/PNGWriter.java',
    'com/thebombzen/jxlatte/io/PushbackInputStream.java',

    # com.thebombzen.jxlatte.util
    'com/thebombzen/jxlatte/util/FlowHelper.java',
    'com/thebombzen/jxlatte/util/IntPoint.java',
    'com/thebombzen/jxlatte/util/IteratorIterable.java',
    'com/thebombzen/jxlatte/util/MathHelper.java',
    'com/thebombzen/jxlatte/util/TaskList.java',

    # com.thebombzen.jxlatte.util.functional
    'com/thebombzen/jxlatte/util/functional/ExceptionalConsumer.java',
    'com/thebombzen/jxlatte/util/functional/ExceptionalFunction.java',
    'com/thebombzen/jxlatte/util/functional/ExceptionalIntBiConsumer.java',
    'com/thebombzen/jxlatte/util/functional/ExceptionalIntConsumer.java',
    'com/thebombzen/jxlatte/util/functional/ExceptionalIntTriConsumer.java',
    'com/thebombzen/jxlatte/util/functional/ExceptionalRunnable.java',
    'com/thebombzen/jxlatte/util/functional/ExceptionalSupplier.java',
    'com/thebombzen/jxlatte/util/functional/FunctionalHelper.java',
)

res = structured_sources(
    files(
        'resources/bt2020-d65-pq.icc',
        'resources/natural-order.dat',
        'resources/default-weights-float.dat',
    ),
)

jxlatte_jar = jar('jxlatte',
    sources: src,
    java_resources: res,
    main_class: 'com.thebombzen.jxlatte.JXLatte',
)
