src = files(
    # com.traneptora.jxlatte
    'com/traneptora/jxlatte/InvalidBitstreamException.java',
    'com/traneptora/jxlatte/JXLatte.java',
    'com/traneptora/jxlatte/JXLCodestreamDecoder.java',
    'com/traneptora/jxlatte/JXLDecoder.java',
    'com/traneptora/jxlatte/JXLImage.java',
    'com/traneptora/jxlatte/JXLOptions.java',

    # com.traneptora.jxlatte.bundle
    'com/traneptora/jxlatte/bundle/AnimationHeader.java',
    'com/traneptora/jxlatte/bundle/BitDepthHeader.java',
    'com/traneptora/jxlatte/bundle/Extensions.java',
    'com/traneptora/jxlatte/bundle/ExtraChannelInfo.java',
    'com/traneptora/jxlatte/bundle/ExtraChannelType.java',
    'com/traneptora/jxlatte/bundle/ImageHeader.java',

    # com.traneptora.jxlatte.color
    'com/traneptora/jxlatte/color/CIEPrimaries.java',
    'com/traneptora/jxlatte/color/CIEXY.java',
    'com/traneptora/jxlatte/color/ColorEncodingBundle.java',
    'com/traneptora/jxlatte/color/ColorFlags.java',
    'com/traneptora/jxlatte/color/ColorManagement.java',
    'com/traneptora/jxlatte/color/GammaTransferFunction.java',
    'com/traneptora/jxlatte/color/OpsinInverseMatrix.java',
    'com/traneptora/jxlatte/color/ToneMapping.java',
    'com/traneptora/jxlatte/color/TransferFunction.java',

    # com.traneptora.jxlatte.entropy
    'com/traneptora/jxlatte/entropy/ANSSymbolDistribution.java',
    'com/traneptora/jxlatte/entropy/EntropyState.java',
    'com/traneptora/jxlatte/entropy/EntropyStream.java',
    'com/traneptora/jxlatte/entropy/HybridIntegerConfig.java',
    'com/traneptora/jxlatte/entropy/PrefixSymbolDistribution.java',
    'com/traneptora/jxlatte/entropy/SymbolDistribution.java',
    'com/traneptora/jxlatte/entropy/VLCTable.java',

    # com.traneptora.jxlatte.frame
    'com/traneptora/jxlatte/frame/BlendingInfo.java',
    'com/traneptora/jxlatte/frame/Frame.java',
    'com/traneptora/jxlatte/frame/FrameFlags.java',
    'com/traneptora/jxlatte/frame/FrameHeader.java',
    'com/traneptora/jxlatte/frame/LFGlobal.java',

    # com.traneptora.jxlatte.frame.features
    'com/traneptora/jxlatte/frame/features/Patch.java',
    'com/traneptora/jxlatte/frame/features/RestorationFilter.java',

    # com.traneptora.jxlatte.frame.features.noise
    'com/traneptora/jxlatte/frame/features/noise/NoiseGroup.java',
    'com/traneptora/jxlatte/frame/features/noise/NoiseParameters.java',
    'com/traneptora/jxlatte/frame/features/noise/XorShiro.java',

    # com.traneptora.jxlatte.frame.features.spline
    'com/traneptora/jxlatte/frame/features/spline/Spline.java',
    'com/traneptora/jxlatte/frame/features/spline/SplineArc.java',
    'com/traneptora/jxlatte/frame/features/spline/SplinesBundle.java',

    # com.traneptora.jxlatte.frame.group
    'com/traneptora/jxlatte/frame/group/LFGroup.java',
    'com/traneptora/jxlatte/frame/group/Pass.java',
    'com/traneptora/jxlatte/frame/group/PassesInfo.java',
    'com/traneptora/jxlatte/frame/group/PassGroup.java',

    # com.traneptora.jxlatte.frame.modular
    'com/traneptora/jxlatte/frame/modular/GlobalModular.java',
    'com/traneptora/jxlatte/frame/modular/MATree.java',
    'com/traneptora/jxlatte/frame/modular/ModularChannel.java',
    'com/traneptora/jxlatte/frame/modular/ModularStream.java',
    'com/traneptora/jxlatte/frame/modular/SqueezeParam.java',
    'com/traneptora/jxlatte/frame/modular/TransformInfo.java',
    'com/traneptora/jxlatte/frame/modular/WPParams.java',

    # com.traneptora.jxlatte.frame.vardct
    'com/traneptora/jxlatte/frame/vardct/DCTParams.java',
    'com/traneptora/jxlatte/frame/vardct/HFBlockContext.java',
    'com/traneptora/jxlatte/frame/vardct/HFCoefficients.java',
    'com/traneptora/jxlatte/frame/vardct/HFGlobal.java',
    'com/traneptora/jxlatte/frame/vardct/HFMetadata.java',
    'com/traneptora/jxlatte/frame/vardct/HFPass.java',
    'com/traneptora/jxlatte/frame/vardct/LFChannelCorrelation.java',
    'com/traneptora/jxlatte/frame/vardct/LFCoefficients.java',
    'com/traneptora/jxlatte/frame/vardct/Quantizer.java',
    'com/traneptora/jxlatte/frame/vardct/TransformType.java',

    # com.traneptora.jxlatte.io
    'com/traneptora/jxlatte/io/Bitreader.java',
    'com/traneptora/jxlatte/io/Demuxer.java',
    'com/traneptora/jxlatte/io/IOHelper.java',
    'com/traneptora/jxlatte/io/Loggers.java',
    'com/traneptora/jxlatte/io/PFMWriter.java',
    'com/traneptora/jxlatte/io/PNGWriter.java',
    'com/traneptora/jxlatte/io/PushbackInputStream.java',

    # com.traneptora.jxlatte.util
    'com/traneptora/jxlatte/util/Dimension.java',
    'com/traneptora/jxlatte/util/ImageBuffer.java',
    'com/traneptora/jxlatte/util/MathHelper.java',
    'com/traneptora/jxlatte/util/Point.java',
    'com/traneptora/jxlatte/util/Rectangle.java',

    # com.traneptora.jxlatte.util.functional
    'com/traneptora/jxlatte/util/functional/ExceptionalConsumer.java',
    'com/traneptora/jxlatte/util/functional/ExceptionalFunction.java',
    'com/traneptora/jxlatte/util/functional/ExceptionalIntBiConsumer.java',
    'com/traneptora/jxlatte/util/functional/ExceptionalIntConsumer.java',
    'com/traneptora/jxlatte/util/functional/ExceptionalIntTriConsumer.java',
    'com/traneptora/jxlatte/util/functional/ExceptionalRunnable.java',
    'com/traneptora/jxlatte/util/functional/ExceptionalSupplier.java',
    'com/traneptora/jxlatte/util/functional/FloatUnaryOperator.java',
    'com/traneptora/jxlatte/util/functional/FunctionalHelper.java',
)

res = structured_sources(
    files(
        'resources/bt2020-d65-pq.icc.zz',
        'resources/natural-order.dat',
        'resources/default-weights-float.dat',
    ),
)

jxlatte_jar = jar('jxlatte',
    sources: src,
    java_resources: res,
    main_class: 'com.traneptora.jxlatte.JXLatte',
)
